# friendslist

./: .gitignore  auth_helpers.py  calendar_helpers.py  db.py  email_helpers.py  generate_calendar.py  html_helpers.py  main.py  pyproject.toml  start_date.py
src/friendslist/: __main__.py  auth_helpers.py  calendar_helpers.py  db.py  email_helpers.py  generate_calendar.py  html_helpers.py  main.py  start_date.py
src/friendslist/templates/: base.html.jinja  calendar.html.jinja
templates/: base.html.jinja  messages.html.jinja
test/: conftest.py  test_db.py
tests/: conftest.py  test_db.py
