[project]
name = "friendslist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "imapclient>=3.1.0",
    "jinja2>=3.1.6",
    "pillow>=12.3.0",
]

[project.scripts]
start = "friendslist.main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/friendslist/templates" = "friendslist/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
